welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:12: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
		if(tea == 2*candy || candy = 2*tea)
                                  ^